crates/pandalang/src/eval/snapshots/pandalang__eval__tests__evals_exprs@var__multi_letter.panda.snap
---
source: crates/pandalang/src/eval/mod.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/var/multi_letter.panda
---
Ok(
    Int(
        Int {
            n: 3,
        },
    ),
)
