crates/pandalang/src/eval/snapshots/pandalang__eval__tests__evals_exprs@var__var.panda.snap
---
source: crates/pandalang/src/eval/mod.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/var/var.panda
---
Ok(
    Int(
        Int {
            n: 0,
        },
    ),
)
